still working on uploadPhoto
heeeeelp
