# service/database/schemas-db.go
@@ -1,6 +1,15 @@
 package database
 
+import "time"
+
 type User struct {
 	ID int64    `json:"userID"`
 	Name string `json:"username"`
+}
+
+type Photo struct {
+	ID int64                 `json:"photoID"`
+	AuthorID int64           `json:"authorID"`
+	Path string              `json:"path"`
+	UploadDateTime time.Time `json:"uploadDateTime"`
 }
